[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leash-sdk"
version = "0.1.0"
description = "Leash platform SDK - access Gmail, Calendar, Drive and more from deployed apps"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://leash.build"

[tool.setuptools.packages.find]
include = ["leash*"]
